# autotests-api

./: .pre-commit-config.yaml  main.py  pyproject.toml  websocker_users_client.py  websocker_users_server.py
course_grpc/: course_service_pb2_grpc.py  grpc_course_client.py  grpc_course_server.py
user_grpc/: user_service_pb2_grpc.py
